--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -684,7 +684,7 @@ service:
   enabled: true
   ## Single service is using `MixedProtocolLBService` feature gate.
   ## When set to false, it will create two Service, one for TCP and one for UDP.
-  single: false
+  single: true
   type: LoadBalancer
   # Additional annotations applied to both TCP and UDP services (e.g. for cloud provider specific config)
   annotations: { }
